--- a/schoolwebsite/src/components/common.css
+++ b/schoolwebsite/src/components/common.css
@@ -2,7 +2,10 @@
     margin-top: 100px;
     height:80vh;
 }
-
+ul {
+    /* list-style-type: "*"; */
+    /* list-style-image: url(images/bullet.png); */
+}
 /* Slides */
 .mainTitle {
     padding-top:120px;
@@ -51,16 +54,67 @@
 }
 .aboutall {
     background-color: #d5f5ef;
-    margin-top: 100px;
+    margin-top: 20px;
 }
 .featureall {
     margin-top: 20px;
 }
 .featuer1 {
     display: flex;
+    align-items: center;
+    justify-content:space-around;
 }
 .featureContent {
+    border: solid 4px #d5f5ef;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    height:250px;
+    width: 260px;
+    border-radius: 110%;
+    margin: 20px;
+    background-color: white;
+}
+.featureInner {
+    /* margin: 20px; */
+    height:200px;
+    width: 210px;
+    border-radius: 110%;
+    background-color: #d5f5ef;
+    padding: 10px;
+}
+.featureDesc {
+    font-weight: bold;
+    color: #0081C9;
+}
+
+.customerall {
+    margin-top: 20px;
+    background-color: #d5f5ef;
+}
+.customer1 {
+    display: flex;
+    align-items: center;
+}
+.customerContent {
     border: solid 1px rgb(203, 206, 206);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+}
+.customerDesc {
+    font-weight: bold;
+    color: #0081C9;
+}
+.customerDescdetail {
+    color: #5BC0F8;
+}
+.ProgressContent {
+    justify-content: center;
+    align-items: center;
 }
 /* Slider */
 .wrap 
